publish-modal: fix the textfield vertical alignement

--- a/app/assets/stylesheets/admin_procedures_modal.scss
+++ b/app/assets/stylesheets/admin_procedures_modal.scss
@@ -16,4 +16,9 @@
   .tt-menu {
     width: 300px;
   }
+
+  // Fix the input not being displayed on the same line than the text before
+  .tt-input {
+    vertical-align: initial !important;
+  }
 }
